--- a/work-single2.html
+++ b/work-single2.html
@@ -112,6 +112,7 @@
                   <li>Color: Red</li>
                   <li>Gender: Male</li>
                   <li>Age: 3Months</li>
+                  <li>Price: $2100</li>
                 </ul>
 
                 <p><a href="contact.html" class="readmore">Email Us</a></p>
