--- a/work-single3.html
+++ b/work-single3.html
@@ -107,6 +107,7 @@
                   <li>Color: Cream</li>
                   <li>Gender: Female</li>
                   <li>Age: 3Months</li>
+                  <li>Price: $2500</li>
                 </ul>
 
                 <p><a href="contact.html" class="readmore">Email Us</a></p>
