--- a/work-single4.html
+++ b/work-single4.html
@@ -112,6 +112,7 @@
                   <li>Color: White</li>
                   <li>Gender: Male</li>
                   <li>Age: 3Months</li>
+                  <li>Price: $2200</li>
                 </ul>
 
                 <p><a href="contact.html" class="readmore">Email Us</a></p>
