--- a/work-single.html
+++ b/work-single.html
@@ -105,7 +105,7 @@
                   <li>Breed: Poodle</li>
                   <li>Name: Guy</li>
                   <li>Color: Cream</li>
-                  <li>Gender: Male</li>
+                  <li>Gender:  Male and Female Available</li>
                   <li>Age: 3Months</li>
                   <li>Price: $2000</li>
                 </ul>
