--- a/work-single11.html
+++ b/work-single11.html
@@ -100,7 +100,7 @@
                   <li>Breed:  Bichon Frise</li>
                   <li>Name:   Leo</li>
                   <li>Color:  White</li>
-                  <li>Gender: male</li>
+                  <li>Gender: Male and Female Available</li>
                   <li>Age:    3Months</li>
                   <li>Price:  $2300</li>
                 </ul>
