--- a/work-single2.html
+++ b/work-single2.html
@@ -110,7 +110,7 @@
                   <li>Breed: Poodle</li>
                   <li>Name: Ben</li>
                   <li>Color: Red</li>
-                  <li>Gender: Male</li>
+                  <li>Gender:  Male and Female Available</li>
                   <li>Age: 3Months</li>
                   <li>Price: $2100</li>
                 </ul>
