--- a/work-single4.html
+++ b/work-single4.html
@@ -110,7 +110,7 @@
                   <li>Breed:Maltese</li>
                   <li>Name: Toby</li>
                   <li>Color: White</li>
-                  <li>Gender: Male</li>
+                  <li>Gender:  Male and Female Available</li>
                   <li>Age: 3Months</li>
                   <li>Price: $2200</li>
                 </ul>
