--- a/work-single13.html
+++ b/work-single13.html
@@ -105,7 +105,7 @@
                   <li>Breed:  Poodle</li>
                   <li>Name:   DoDo</li>
                   <li>Color:  White</li>
-                  <li>Gender: Female</li>
+                  <li>Gender:  Male and Female Available</li>
                   <li>Age:    5Months</li>
                   <li>Price:  $2000</li>
                 </ul>
