--- a/work-single17.html
+++ b/work-single17.html
@@ -105,7 +105,7 @@
                   <li>Breed:  Poodle</li>
                   <li>Name:   May</li>
                   <li>Color:  Cream</li>
-                  <li>Gender: Female</li>
+                  <li>Gender:  Male and Female Availablee</li>
                   <li>Age:    3Months</li>
                   <li>Price:  $2000</li>
                 </ul>
