--- a/work-single7.html
+++ b/work-single7.html
@@ -105,7 +105,7 @@
                   <li>Breed:  Poodle</li>
                   <li>Name:   Leo</li>
                   <li>Color:  Silver</li>
-                  <li>Gender: Female</li>
+                  <li>Gender:  Male and Female Available</li>
                   <li>Age:    3Months</li>
                   <li>Price:  $2300</li>
                 </ul>
