--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
           <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-up">
 
             <form action="https://formsubmit.co/angelpuppy62@gmail.com" method="post" role="form" class="php-email-form">
-
+              <input type="hidden" name="_captcha" value="false">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <label for="name">Name</label>
