--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@
             <ul class="list-unstyled">
               <li class="mb-3">
                 <strong class="d-block mb-1">Address</strong>
-                <span>203 Fake St. Mountain View, San Francisco, California, USA</span>
+                <span>18545 W. Dixie Hwy Aventura, Florida</span>
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Phone</strong>
