--- a/contact.html
+++ b/contact.html
@@ -132,11 +132,11 @@
             <ul class="list-unstyled">
               <li class="mb-3">
                 <strong class="d-block mb-1">Address</strong>
-                <span>18545 W. Dixie Hwy Aventura, Florida</span>
+                <span>540 86th Brooklyn,NY 11209 United States</span>
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Phone</strong>
-                <span>+1(760) 474 5059</span>
+                <span>+1(619)714-9402</span>
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Email</strong>
