--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/line-awesome/css/line-awesome.min.css" rel="stylesheet">
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-
+ 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
@@ -100,7 +100,7 @@
               </div>
               <img class="img-fluid" src="assets/img/1.jpg">
             </a>
-            <div class="price"><h1>$2000</h1></div>
+            <div class="price"><h1>$1000</h1></div>
           </div>
           <div class="item poodle col-sm-6 col-xs-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single2.html" class="item-wrap fancybox">
@@ -110,7 +110,7 @@
               </div>
               <img class="img-fluid" src="assets/img/2.jpg">
             </a>
-            <div class="price"><h1>$2100</h1></div>
+            <div class="price"><h1>$1100</h1></div>
           </div>
           <div class="item poodle col-sm-6 col-xs-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single3.html" class="item-wrap fancybox">
@@ -120,7 +120,7 @@
               </div>
               <img class="img-fluid" src="assets/img/3.jpg">
             </a>
-            <div class="price"><h1>$2500</h1></div>
+            <div class="price"><h1>$1500</h1></div>
           </div>
           <div class="item Maltese col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single4.html" class="item-wrap fancybox">
@@ -130,7 +130,7 @@
               </div>
               <img class="img-fluid" src="assets/img/4.jpg">
             </a>
-            <div class="price"><h1>$2200</h1></div>
+            <div class="price"><h1>$1200</h1></div>
           </div>
           <div class="item Pomeranian col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single5.html" class="item-wrap fancybox">
@@ -140,7 +140,7 @@
               </div>
               <img class="img-fluid" src="assets/img/5.jpg">
             </a>
-            <div class="price"><h1>$2500</h1></div>
+            <div class="price"><h1>$1500</h1></div>
           </div>
           <div class="item Pomeranian col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single6.html" class="item-wrap fancybox">
@@ -150,7 +150,7 @@
               </div>
               <img class="img-fluid" src="assets/img/6.jpg">
             </a>
-            <div class="price"><h1>$2500</h1></div>
+            <div class="price"><h1>$1500</h1></div>
           </div>
         </div>
         <div id="portfolio-grid3" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
@@ -162,7 +162,7 @@
               </div>
               <img class="img-fluid" src="assets/img/7.jpg">
             </a>
-            <div class="price"><h1>$2500</h1></div>
+            <div class="price"><h1>$1100</h1></div>
           </div>
           <div class="item poodle col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single7.html" class="item-wrap fancybox">
@@ -172,7 +172,7 @@
               </div>
               <img class="img-fluid" src="assets/img/8.jpg">
             </a>
-            <div class="price"><h1>$2300</h1></div>
+            <div class="price"><h1>$1300</h1></div>
           </div>
           <div class="item poodle col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single8.html" class="item-wrap fancybox">
@@ -183,7 +183,7 @@
               <img class="img-fluid" src="assets/img/9.jpg">
             </a>
 
-            <div class="price"><h1>$2000</h1></div>
+            <div class="price"><h1>$1000</h1></div>
           </div>
           <div class="item Maltese col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single9.html" class="item-wrap fancybox">
@@ -193,7 +193,7 @@
               </div>
               <img class="img-fluid" src="assets/img/10.jpg">
             </a>
-            <div class="price"><h1>$2200</h1></div>
+            <div class="price"><h1>$1200</h1></div>
           </div>
           <div class="item Pomeranian col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single10.html" class="item-wrap fancybox">
@@ -203,7 +203,7 @@
               </div>
               <img class="img-fluid" src="assets/img/11.jpg">
             </a>
-            <div class="price"><h1>$2500</h1></div>
+            <div class="price"><h1>$1250</h1></div>
           </div>
           <div class="item Bichon col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single11.html" class="item-wrap fancybox">
@@ -213,7 +213,7 @@
               </div>
               <img class="img-fluid" src="assets/img/12.jpg">
             </a>
-            <div class="price"><h1>$2300</h1></div>
+            <div class="price"><h1>$1000</h1></div>
           </div>
         </div>
         <div id="portfolio-grid2" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
@@ -225,7 +225,7 @@
               </div>
               <img class="img-fluid" src="assets/img/13.jpg">
             </a>
-            <div class="price"><h1>$2500</h1></div>
+            <div class="price"><h1>$1250</h1></div>
           </div>
           <div class="item poodle col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single13.html" class="item-wrap fancybox">
@@ -235,7 +235,7 @@
               </div>
               <img class="img-fluid" src="assets/img/14.jpg">
             </a>
-            <div class="price"><h1>$2000</h1></div>
+            <div class="price"><h1>$1000</h1></div>
           </div>
           <div class="item Pomeranian col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single14.html" class="item-wrap fancybox">
@@ -245,7 +245,7 @@
               </div>
               <img class="img-fluid" src="assets/img/15.jpg">
             </a>
-            <div class="price"><h1>$2500</h1></div>
+            <div class="price"><h1>$1100</h1></div>
           </div>
           <div class="item Pomeranian col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single15.html" class="item-wrap fancybox">
@@ -255,7 +255,7 @@
               </div>
               <img class="img-fluid" src="assets/img/16.jpg">
             </a>
-            <div class="price"><h1>$2500</h1></div>
+            <div class="price"><h1>$1100</h1></div>
           </div>
           <div class="item poodle col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single16.html" class="item-wrap fancybox">
@@ -265,7 +265,7 @@
               </div>
               <img class="img-fluid" src="assets/img/17.jpg">
             </a>
-            <div class="price"><h1>$2000</h1></div>
+            <div class="price"><h1>$1000</h1></div>
           </div>
           <div class="item poodle col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single17.html" class="item-wrap fancybox">
@@ -275,7 +275,7 @@
               </div>
               <img class="img-fluid" src="assets/img/18.jpg">
             </a>
-            <div class="price"><h1>$2000</h1></div>
+            <div class="price"><h1>$1000</h1></div>
           </div>
         </div>
 
@@ -288,7 +288,7 @@
               </div>
               <img class="img-fluid" src="assets/img/24.jpeg">
             </a>
-            <div class="price"><h1>$2500</h1></div>
+            <div class="price"><h1>$1100</h1></div>
           </div>
           <div class="item poodle col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single19.html" class="item-wrap fancybox">
@@ -298,7 +298,7 @@
               </div>
               <img class="img-fluid" src="assets/img/22.jpeg">
             </a>
-            <div class="price"><h1>$2100</h1></div>
+            <div class="price"><h1>$1100</h1></div>
           </div>
           <div class="item Pomeranian col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single20.html" class="item-wrap fancybox">
@@ -308,7 +308,7 @@
               </div>
               <img class="img-fluid" src="assets/img/19.jpeg">
             </a>
-            <div class="price"><h1>$2500</h1></div>
+            <div class="price"><h1>$1500</h1></div>
           </div>
           <div class="item Pomeranian col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single21.html" class="item-wrap fancybox">
@@ -318,7 +318,7 @@
               </div>
               <img class="img-fluid" src="assets/img/26.jpeg">
             </a>
-            <div class="price"><h1>$2500</h1></div>
+            <div class="price"><h1>$1300</h1></div>
           </div>
           <div class="item poodle col-sm-6 col-md-4 col-lg-4 mb-4">
            
@@ -385,6 +385,7 @@
 
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
+  
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -396,7 +397,8 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+     
+  <script src="//code.tidio.co/lqeqyacy4q3kuuezufkz6mpabqij8cze.js" async></script>
 </body>
 
 </html>
