--- a/work-single16.html
+++ b/work-single16.html
@@ -41,7 +41,7 @@
             <li><a href="about.html">About Me</a></li>
             <li><a href="services.html">Services</a></li>
             <li class="active"><a href="works.html">Works</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.php">Contact</a></li>
           </ul>
         </div>
         <div class="col-md-6 d-none d-md-block  mr-auto">
@@ -106,11 +106,11 @@
                   <li>Name:    Toto</li>
                   <li>Color:  Cream</li>
                   <li>Gender:  Male and Female Available</li>
-                  <li>Age:    2Months</li>
+                  <li>Age:    8 weeks</li>
                   <li>Price:  $1000</li>
                 </ul>
 
-                <p><a href="contact.html" class="readmore">Email Us</a></p>
+                <p><a href="contact.php" class="readmore">Email Us</a></p>
               </div>
             </div>
           </div>
@@ -163,7 +163,7 @@
         </div>
         <div class="col-sm-6 social text-md-right">
 
-          <a href="https://facebook.com/teacuppupiesforsale/"><span class="icofont-facebook"></span></a>
+          <a href="https://www.facebook.com/teacupspuppyworld/"><span class="icofont-facebook"></span></a>
           <a href="angelpuppy62@gmail.com"><span class="icofont-ui-message"></span></a>
           <a href="https://instagram.com/teacuppuppyworld_?utm_medium=copy_link"><span class="icofont-instagram"></span></a>
         </div>
