--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="about.html">About Me</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="contact.php">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="col-md-6 d-none d-md-block  mr-auto">
