--- a/work-single.html
+++ b/work-single.html
@@ -41,7 +41,7 @@
             <li><a href="about.html">About Me</a></li>
             <li><a href="services.html">Services</a></li>
             <li class="active"><a href="works.html">Works</a></li>
-            <li><a href="contact.php">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="col-md-6 d-none d-md-block  mr-auto">
@@ -110,7 +110,7 @@
                   <li>Price: $1000</li>
                 </ul>
 
-                <p><a href="contact.php" class="readmore">Email Us</a></p>
+                <p><a href="contact.html" class="readmore">Email Us</a></p>
               </div>
             </div>
           </div>
